[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Sprites/Ground.png" type="Texture" id=1]
[ext_resource path="res://assets/Sprites/sprites.png" type="Texture" id=2]
[ext_resource path="res://Terreno.gd" type="Script" id=3]
[ext_resource path="res://GameScene.gd" type="Script" id=4]
[ext_resource path="res://Slider.gd" type="Script" id=7]
[ext_resource path="res://Dino.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 240.25, 15.875 )

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Dino" parent="." instance=ExtResource( 8 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 242, 704.875 )
shape = SubResource( 5 )

[node name="Slider" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="GroundLayer" type="Node2D" parent="Slider"]

[node name="Ground1" type="Sprite" parent="Slider/GroundLayer" groups=["ground"]]
position = Vector2( 0, 609 )
texture = ExtResource( 1 )
centered = false

[node name="Ground2" type="Sprite" parent="Slider/GroundLayer" groups=["ground"]]
position = Vector2( 2400, 609 )
texture = ExtResource( 1 )
centered = false

[node name="SpawnPosition" type="Position2D" parent="Slider"]
position = Vector2( 1594, 698 )
__meta__ = {
"_gizmo_extents_": 169.7
}

[node name="ObstSpawnTimer" type="Timer" parent="Slider"]
autostart = true

[node name="Terreno" type="ParallaxBackground" parent="."]
script = ExtResource( 3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Terreno"]
motion_mirroring = Vector2( 2400, 0 )

[node name="chao" type="Sprite" parent="Terreno/ParallaxLayer"]
position = Vector2( 715, 704 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 102, 2400, 26 )

[node name="Pontos" type="Label" parent="."]
margin_left = 40.0
margin_top = 20.0
margin_right = 140.0
margin_bottom = 55.0
text = "Pontos: 0"

[node name="Record" type="Label" parent="."]
margin_left = 616.0
margin_top = 20.0
margin_right = 716.0
margin_bottom = 55.0
text = "Record: 0"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="timeout" from="Slider/ObstSpawnTimer" to="Slider" method="_on_ObstSpawnTimer_timeout"]
